finished footer and correct z-index navbar

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -4,17 +4,21 @@
     overflow: visible
     background-color: #e2e2e2
 .navbar-container
+    z-index: 1000
     background-color: #2e2d2d
     position: sticky
     top: 0
     transition: .5s ease
+    display: flex
+    justify-content: center
 .nav_scrolled
     // background-color: rgba(193, 38, 71, .9)
-    background-color: rgba(0, 0, 0, .8)
+    background-color: rgba(0,0,0,.9)
 .navbar
-    padding: 1em .5em
+    width: 95%
+    padding: 1em 0
     display: flex
-    justify-content: space-around
+    justify-content: space-between
     align-items: center
 .logo
     height: 9em
