--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -1,1 +1,24 @@
+$bg-color: #2e2d2d
+.footer-container
+    padding: 3em 0
+    background-color: $bg-color
+.accordion-section
+    display: flex
+    flex-direction: column
+    align-items: center
+.expansion-panel
+    background-color: $bg-color
+    *
+        filter: invert(1)
+        color: white
+    a
+        text-decoration: underline
 
+.copyright-container
+    display: flex
+    justify-content: center
+    background-color: #C12647
+    padding: 3em 0
+.copy-content
+    text-align: center
+    color: white
