--- a/src/styles.sass
+++ b/src/styles.sass
@@ -17,3 +17,6 @@ menu,p
     padding: 0
 h1,h2,h3,h4,h5,h6
     margin: 0
+.container
+    max-width: 72em
+    width: 95%
